--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,147 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+.top-nav {
+  background-color: #1d1d1b;
+}
+.top-nav .top-nav-content {
+  width: 90%;
+  margin: 0 auto;
+  padding: 0.4rem;
+  color: #b4b4b4;
+  font-weight: 300;
+  font-size: 0.8rem;
+}
+.top-nav .top-nav-content .top-nav-left {
+  gap: 1rem;
+}
+.top-nav .top-nav-content ul {
+  gap: 1rem;
+}
+.top-nav .top-nav-content ul li a {
+  color: #b4b4b4;
+}
+
+.main-nav-container {
+  box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.3);
+}
+.main-nav-container .main-nav {
+  width: 80%;
+  margin: 0 auto;
+  height: 7rem;
+  align-items: center;
+}
+.main-nav-container .main-nav .main-nav-logo {
+  align-items: center;
+  font-size: 1.3rem;
+  background-color: #d8d8d8;
+  color: #525252;
+  border: 1px solid #979797;
+  height: 65%;
+  width: 15rem;
+}
+.main-nav-container .main-nav .main-nav-left,
+.main-nav-container .main-nav .main-nav-right {
+  gap: 1.7rem;
+  font-weight: 500;
+  font-size: 1rem;
+  width: 35%;
+}
+.main-nav-container .main-nav .main-nav-left {
+  justify-content: start;
+}
+.main-nav-container .main-nav .main-nav-right {
+  justify-content: end;
+}
+
+.product-section {
+  background: rgb(255, 255, 255);
+  background: linear-gradient(0deg, rgb(255, 255, 255) 0%, rgb(236, 236, 236) 100%);
+}
+.product-section .product .main-image-container {
+  max-width: 60%;
+}
+.product-section .product .main-image-container img {
+  max-width: 100%;
+}
+.product-section .product .product-info-container {
+  min-width: 40%;
+  flex-grow: 1;
+}
+.product-section .product .product-info-container .is-in-stock {
+  display: flex;
+  justify-content: end;
+  padding: 1rem;
+  font-size: 0.9rem;
+}
+.product-section .product .product-info-container .product-description {
+  text-align: center;
+}
+.product-section .product .product-info-container .product-description .size-select {
+  gap: 0.3rem;
+}
+.product-section .product input {
+  display: none;
+}
+.product-section .product label {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #999999;
+  font-size: 0.8rem;
+  padding: 0.3rem 0.5rem;
+  cursor: pointer;
+}
+.product-section .product p {
+  color: #bababa;
+}
+.product-section .product p span {
+  color: black;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  list-style: none;
+  font-family: "Roboto";
+  text-decoration: none;
+}
+
+.top-left-info-label {
+  background-color: black;
+  font-size: 1rem;
+  color: #f0f0f0;
+  text-align: center;
+  padding: 0.3rem 1.2rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.flex {
+  display: flex;
+}
+
+.justify-between {
+  justify-content: space-between;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.relative {
+  position: relative;
+}
+
+.border {
+  border: 2px solid black;
+}
+
+.uppercase {
+  text-transform: uppercase;
 }
 
 /*# sourceMappingURL=style.css.map */
