--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 .top-nav {
   background-color: #1d1d1b;
 }
-.top-nav .top-nav-content {
+.top-nav .top-nav__content {
   width: 90%;
   margin: 0 auto;
   padding: 0.4rem;
@@ -13,18 +13,17 @@
   font-weight: 300;
   font-size: 0.8rem;
 }
-.top-nav .top-nav-content .top-nav-left {
+.top-nav .top-nav__content .top-nav__left,
+.top-nav .top-nav__content .top-nav__right {
   gap: 1rem;
 }
-.top-nav .top-nav-content ul {
-  gap: 1rem;
-}
-.top-nav .top-nav-content ul li a {
+.top-nav .top-nav__content ul li a {
   color: #b4b4b4;
 }
 
 .main-nav-container {
-  box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.3);
+  background-color: white;
+  filter: drop-shadow(1px 1px 5px rgba(0, 0, 0, 0.2509803922));
 }
 .main-nav-container .main-nav {
   width: 80%;
@@ -32,7 +31,10 @@
   height: 7rem;
   align-items: center;
 }
-.main-nav-container .main-nav .main-nav-logo {
+.main-nav-container .main-nav a {
+  color: black;
+}
+.main-nav-container .main-nav .main-nav__logo {
   align-items: center;
   font-size: 1.3rem;
   background-color: #d8d8d8;
@@ -41,50 +43,129 @@
   height: 65%;
   width: 15rem;
 }
-.main-nav-container .main-nav .main-nav-left,
-.main-nav-container .main-nav .main-nav-right {
+.main-nav-container .main-nav .main-nav__left,
+.main-nav-container .main-nav .main-nav__right {
   gap: 1.7rem;
   font-weight: 500;
   font-size: 1rem;
   width: 35%;
 }
-.main-nav-container .main-nav .main-nav-left {
+.main-nav-container .main-nav .main-nav__left {
   justify-content: start;
 }
-.main-nav-container .main-nav .main-nav-right {
+.main-nav-container .main-nav .main-nav__right {
   justify-content: end;
+}
+
+.accordion {
+  margin: 2rem auto;
+  max-width: 90%;
+}
+.accordion .accordion__row {
+  border-top: 2px solid #aaaaaa;
+}
+.accordion .accordion__row:last-child {
+  border-bottom: 2px solid #aaaaaa;
+}
+.accordion .accordion__row.active .accordion__row__title {
+  color: #000;
+}
+.accordion .accordion__row.active .accordion__row__content {
+  margin-bottom: 2rem;
+}
+.accordion .accordion__row .accordion__row__title {
+  padding: 1.4rem 0;
+  align-items: center;
+  color: #aaaaaa;
+}
+.accordion .accordion__row .accordion__row__title h2 {
+  font-size: 1rem;
+  font-weight: 400;
+}
+.accordion .accordion__row .accordion__row__title i.fa-chevron-down {
+  cursor: pointer;
+  font-size: 1.2rem;
+}
+.accordion .accordion__row .accordion__row__content {
+  max-height: 0px;
+  overflow-y: hidden;
+  transition: all 0.5s ease-in-out;
+}
+.accordion .accordion__row .accordion__row__content p {
+  text-align: left;
+  color: black;
 }
 
 .product-section {
   background: rgb(255, 255, 255);
   background: linear-gradient(0deg, rgb(255, 255, 255) 0%, rgb(236, 236, 236) 100%);
+  margin: 0 auto;
+  max-width: 2500px;
 }
 .product-section .product .main-image-container {
-  max-width: 60%;
+  min-width: 60%;
 }
 .product-section .product .main-image-container img {
   max-width: 100%;
+  max-height: 50rem;
+  object-fit: cover;
 }
 .product-section .product .product-info-container {
   min-width: 40%;
   flex-grow: 1;
 }
-.product-section .product .product-info-container .is-in-stock {
+.product-section .product .product-info-container .product-info__in-stock {
   display: flex;
   justify-content: end;
   padding: 1rem;
   font-size: 0.9rem;
 }
-.product-section .product .product-info-container .product-description {
+.product-section .product .product-info-container .product-info__in-stock i.fa-check {
+  color: #59c587;
+}
+.product-section .product .product-info-container .product-desc {
   text-align: center;
 }
-.product-section .product .product-info-container .product-description .size-select {
+.product-section .product .product-info-container .product-desc .product-desc__logo img {
+  display: block;
+  margin: 0 auto;
+}
+.product-section .product .product-info-container .product-desc button {
+  background-color: #141527;
+  color: white;
+  border: none;
+  height: 2.5rem;
+  width: 12rem;
+  margin-bottom: 2rem;
+  font-weight: 300;
+  cursor: pointer;
+}
+.product-section .product .product-info-container .product-desc p {
+  font-size: 0.85rem;
+}
+.product-section .product .product-info-container .product-desc .product-desc__text h2 {
+  font-size: 1.1rem;
+  font-weight: 500;
+  line-height: 1.6rem;
+  max-width: 50%;
+  margin: 1.5rem auto;
+}
+.product-section .product .product-info-container .product-desc .product-desc__text h3 {
+  font-weight: 800;
+}
+.product-section .product .product-info-container .product-desc .product-desc__text .product-desc__size-select {
   gap: 0.3rem;
 }
-.product-section .product input {
+.product-section .product .product-info-container .product-desc .product-desc__text .product-desc__size-select h3 {
+  font-size: 0.9rem;
+  font-weight: 500;
+  display: block;
+  margin: 2rem 0 0.5rem 0;
+}
+.product-section .product .product-info-container .product-desc .product-desc__text .product-desc__size-select .product-desc__size-select__labels input[type=radio] {
   display: none;
 }
-.product-section .product label {
+.product-section .product .product-info-container .product-desc .product-desc__text .product-desc__size-select .product-desc__size-select__labels label {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -92,12 +173,50 @@
   font-size: 0.8rem;
   padding: 0.3rem 0.5rem;
   cursor: pointer;
+  margin: 0 0.23rem 2rem;
+  background-color: white;
+}
+.product-section .product .product-info-container .product-desc .product-desc__text .product-desc__size-select .product-desc__size-select__labels input[type=radio]:checked + label {
+  background-color: #141527;
+  color: white;
 }
 .product-section .product p {
   color: #bababa;
 }
 .product-section .product p span {
   color: black;
+}
+
+.related {
+  width: 90%;
+  margin: 6rem auto;
+  max-width: 2500px;
+}
+.related .related__header {
+  margin-bottom: 2rem;
+  color: black;
+  font-weight: 500;
+}
+.related .related__header i {
+  padding-left: 1rem;
+}
+.related .related__related-cards {
+  flex-wrap: wrap;
+  margin: 0 auto;
+}
+.related .related__related-cards .related__card .related__card__info {
+  max-width: 80%;
+  margin: 1rem auto;
+  text-align: center;
+}
+.related .related__related-cards .related__card .related__card__info h5 {
+  margin-bottom: 0.75rem;
+  font-size: 1rem;
+  font-weight: 800;
+}
+.related .related__related-cards .related__card .related__card__info p {
+  line-height: 1.5rem;
+  color: #aaa;
 }
 
 * {
@@ -109,12 +228,17 @@
   text-decoration: none;
 }
 
+.container {
+  max-width: 2600px;
+  margin: 0 auto;
+}
+
 .top-left-info-label {
   background-color: black;
   font-size: 1rem;
   color: #f0f0f0;
   text-align: center;
-  padding: 0.3rem 1.2rem;
+  padding: 0.3rem 1.5rem;
   position: absolute;
   top: 0;
   left: 0;
