--- a/scss/_main_product.scss
+++ b/scss/_main_product.scss
@@ -9,15 +9,15 @@
     rgba(236, 236, 236, 1) 100%
   );
   margin: 0 auto;
-  max-width: 2500px;
+  max-width: 1590px;
 
   .product {
     .main-image-container {
       min-width: 60%;
 
       & img {
-        max-width: 100%;
-        max-height: 50rem;
+        width: 100%;
+        max-height: 55rem;
         object-fit: cover;
       }
     }
