--- a/scss/_top_nav.scss
+++ b/scss/_top_nav.scss
@@ -4,12 +4,13 @@
     background-color: $top-black;
 
     .top-nav__content {
+        max-width: 2000px;
         width: 90%;
         margin: 0 auto;
         padding: .4rem;
         color: #b4b4b4;
         font-weight: 300;
-        font-size: .8rem;
+        font-size: 1rem;
 
         .top-nav__left,
         .top-nav__right {
