--- a/scss/_top_nav.scss
+++ b/scss/_top_nav.scss
@@ -9,8 +9,8 @@
         margin: 0 auto;
         padding: .4rem;
         color: #b4b4b4;
-        font-weight: 300;
-        font-size: 1rem;
+        font-weight: 400;
+        font-size: .85rem;
 
         .top-nav__left,
         .top-nav__right {
