--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,8 @@
   margin: 0 auto;
   padding: 0.4rem;
   color: #b4b4b4;
-  font-weight: 300;
-  font-size: 1rem;
+  font-weight: 400;
+  font-size: 0.85rem;
 }
 .top-nav .top-nav__content .top-nav__left,
 .top-nav .top-nav__content .top-nav__right {
@@ -30,7 +30,7 @@
 .main-nav-container .main-nav {
   width: 80%;
   margin: 0 auto;
-  height: 7rem;
+  height: 8rem;
   align-items: center;
   max-width: 1200px;
 }
@@ -39,17 +39,17 @@
 }
 .main-nav-container .main-nav .main-nav__logo {
   align-items: center;
-  font-size: 1.3rem;
+  font-size: 1.6rem;
   background-color: #d8d8d8;
   color: #525252;
   border: 1px solid #979797;
-  height: 65%;
-  width: 15rem;
+  height: 70%;
+  width: 18rem;
 }
 .main-nav-container .main-nav .main-nav__left,
 .main-nav-container .main-nav .main-nav__right {
   gap: 1.7rem;
-  font-weight: 500;
+  font-weight: 400;
   font-size: 1rem;
   width: 35%;
 }
@@ -59,16 +59,20 @@
 .main-nav-container .main-nav .main-nav__right {
   justify-content: end;
 }
+.main-nav-container .main-nav .main-nav__right i {
+  margin-left: 1rem;
+  font-size: 1.1rem;
+}
 
 .accordion {
-  margin: 2rem auto;
+  margin: 1rem auto;
   max-width: 90%;
 }
 .accordion .accordion__row {
-  border-top: 2px solid #aaaaaa;
+  border-top: 1px solid #aaaaaa;
 }
 .accordion .accordion__row:last-child {
-  border-bottom: 2px solid #aaaaaa;
+  border-bottom: 1px solid #aaaaaa;
 }
 .accordion .accordion__row.active .accordion__row__title {
   color: #000;
@@ -82,7 +86,7 @@
   color: #aaaaaa;
 }
 .accordion .accordion__row .accordion__row__title h2 {
-  font-size: 1rem;
+  font-size: 0.9rem;
   font-weight: 400;
 }
 .accordion .accordion__row .accordion__row__title i.fa-chevron-down {
@@ -97,21 +101,20 @@
 .accordion .accordion__row .accordion__row__content p {
   text-align: left;
   color: black;
+  font-weight: 700;
 }
 
 .product-section {
   background: rgb(255, 255, 255);
   background: linear-gradient(0deg, rgb(255, 255, 255) 0%, rgb(236, 236, 236) 100%);
-  margin: 0 auto;
+  margin: 0 auto 7rem;
   max-width: 1590px;
 }
 .product-section .product .main-image-container {
-  min-width: 60%;
+  min-width: 56%;
 }
 .product-section .product .main-image-container img {
   width: 100%;
-  max-height: 55rem;
-  object-fit: cover;
 }
 .product-section .product .product-info-container {
   min-width: 40%;
@@ -137,9 +140,10 @@
   background-color: #141527;
   color: white;
   border: none;
-  height: 2.5rem;
-  width: 12rem;
+  height: 3rem;
+  width: 14rem;
   margin-bottom: 2rem;
+  font-size: 1rem;
   font-weight: 300;
   cursor: pointer;
 }
@@ -147,8 +151,8 @@
   font-size: 0.85rem;
 }
 .product-section .product .product-info-container .product-desc .product-desc__text h2 {
-  font-size: 1.1rem;
-  font-weight: 500;
+  font-size: 1.3rem;
+  font-weight: 400;
   line-height: 1.6rem;
   max-width: 50%;
   margin: 1.5rem auto;
@@ -191,21 +195,23 @@
 }
 
 .related {
-  width: 95%;
-  margin: 6rem auto;
-  max-width: 1589px;
+  margin: 0 auto 6rem;
+  max-width: 1431px;
 }
 .related .related__header {
-  margin-bottom: 2rem;
+  margin-bottom: 2.7rem;
   color: black;
   font-weight: 500;
 }
+.related .related__header h4,
 .related .related__header a {
+  font-size: 1.35rem;
+  font-weight: 400;
   color: black;
-  font-weight: 800;
 }
 .related .related__header i {
-  padding-left: 0.4rem;
+  font-size: 1.25rem;
+  padding-left: 1rem;
 }
 .related .related__related-cards {
   flex-wrap: wrap;
@@ -213,6 +219,7 @@
 }
 .related .related__related-cards .related__card {
   max-width: 24%;
+  background-color: #fdfdfd;
 }
 .related .related__related-cards .related__card img {
   max-width: 100%;
@@ -229,12 +236,12 @@
   letter-spacing: -0.5px;
 }
 .related .related__related-cards .related__card .related__card__info p {
-  font-size: 1rem;
+  font-size: 0.95rem;
   line-height: 1.5rem;
   color: #aaa;
 }
 .related .related__related-cards .related__card .related__card__info span.price {
-  margin-top: 0.75rem;
+  line-height: 4rem;
   font-weight: 800;
   color: black;
   font-size: 1.2rem;
@@ -248,54 +255,169 @@
 }
 
 .subscribe {
-  width: 96%;
-  max-width: 1590px;
-  margin: 0 auto;
+  max-width: 1431px;
+  margin: 0 auto 2rem;
+  position: relative;
   background-image: url("../assets/img/newsletter_bg.png");
-  height: 20rem;
   background-repeat: no-repeat;
-  background-size: cover;
   background-position: center;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 200px;
+  background-size: cover;
+  background-color: rgba(0, 0, 0, 0.4);
+  background-blend-mode: multiply;
+  height: 20rem;
 }
-.subscribe .subscribe__text {
-  color: white;
+.subscribe .subscribe__contents {
+  width: 80%;
+  height: 100%;
+  margin: 0 auto;
+}
+.subscribe .subscribe__contents .subscribe__contents__text {
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: #e9e9e9;
   width: 50%;
   text-align: center;
 }
-.subscribe .subscribe__text h2 {
+.subscribe .subscribe__contents .subscribe__contents__text h2 {
   font-weight: 400;
   font-size: 2.4rem;
   margin-bottom: 1.6rem;
 }
-.subscribe .subscribe__text p {
+.subscribe .subscribe__contents .subscribe__contents__text p {
   line-height: 1.6rem;
 }
-.subscribe .subscribe__form {
-  width: 50%;
+.subscribe .subscribe__contents .subscribe__contents__form {
+  padding-left: 4rem;
+  align-items: center;
 }
-.subscribe .subscribe__form form {
-  display: flex;
+.subscribe .subscribe__contents .subscribe__contents__form form {
+  border: 1px solid black;
+  height: 3rem;
 }
-.subscribe .subscribe__form form input[type=text] {
+.subscribe .subscribe__contents .subscribe__contents__form form input[type=text] {
   border: none;
-  display: block;
-  width: 25rem;
-  padding: 1rem;
-  margin-left: 5rem;
+  width: 20.7rem;
+  height: 100%;
+  margin-right: -3px;
+  padding: 0 0.8rem;
 }
-.subscribe .subscribe__form form input[type=text]::placeholder {
+.subscribe .subscribe__contents .subscribe__contents__form form input[type=text]::placeholder {
   text-transform: uppercase;
   font-size: 1rem;
+  letter-spacing: 2px;
+  color: #999999;
 }
-.subscribe .subscribe__form form button {
+.subscribe .subscribe__contents .subscribe__contents__form form button {
   border: none;
   background-color: #141527;
   color: white;
   font-size: 1rem;
+  letter-spacing: 2px;
+  height: 100%;
   padding: 0 2rem;
+}
+
+.socials {
+  background-color: #f1f1f1;
+}
+.socials .socials__content {
+  max-width: 1431px;
+  margin: 0 auto;
+  padding: 3rem 0;
+  gap: 1.4rem;
+}
+.socials .socials__content a {
+  flex-grow: 1;
+  color: black;
+  font-size: 1.13rem;
+  letter-spacing: 1px;
+}
+.socials .socials__content .socials__content__instagram,
+.socials .socials__content .socials__content__facebook,
+.socials .socials__content .socials__content__nyhetsbrev {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid black;
+  padding: 1rem 0;
+}
+
+footer {
+  background-color: black;
+  color: white;
+}
+footer .footer__content {
+  max-width: 1431px;
+  margin: 0 auto;
+}
+footer .footer__content .footer__content__top {
+  display: flex;
+  justify-content: space-between;
+  padding: 6rem 0 10rem;
+}
+footer .footer__content .footer__content__top .customer-service,
+footer .footer__content .footer__content__top .contact,
+footer .footer__content .footer__content__top .shop,
+footer .footer__content .footer__content__top .extra {
+  min-width: 20%;
+}
+footer .footer__content .footer__content__top .customer-service h4,
+footer .footer__content .footer__content__top .contact h4,
+footer .footer__content .footer__content__top .shop h4,
+footer .footer__content .footer__content__top .extra h4 {
+  letter-spacing: 2px;
+  font-size: 1.3rem;
+  margin-bottom: 1rem;
+  font-weight: 500;
+}
+footer .footer__content .footer__content__top .customer-service ul li,
+footer .footer__content .footer__content__top .contact ul li,
+footer .footer__content .footer__content__top .shop ul li,
+footer .footer__content .footer__content__top .extra ul li {
+  padding-top: 1rem;
+  color: #aaa;
+}
+footer .footer__content .footer__content__top .customer-service ul li a,
+footer .footer__content .footer__content__top .contact ul li a,
+footer .footer__content .footer__content__top .shop ul li a,
+footer .footer__content .footer__content__top .extra ul li a {
+  color: #aaa;
+}
+footer .footer__content .footer__content__top .customer-service ul li.bold,
+footer .footer__content .footer__content__top .contact ul li.bold,
+footer .footer__content .footer__content__top .shop ul li.bold,
+footer .footer__content .footer__content__top .extra ul li.bold {
+  font-weight: 800;
+  color: #cccccc;
+}
+footer .footer__content .footer__content__top .customer-service:last-of-type,
+footer .footer__content .footer__content__top .contact:last-of-type,
+footer .footer__content .footer__content__top .shop:last-of-type,
+footer .footer__content .footer__content__top .extra:last-of-type {
+  margin-top: 41px;
+}
+footer .footer__content .footer__content__bottom {
+  color: #777777;
+  border-top: 1px solid #464646;
+  border-bottom: 1px solid #464646;
+  text-align: center;
+}
+footer .footer__content .footer__content__bottom p {
+  line-height: 1.6rem;
+  max-width: 80%;
+  margin: 3rem auto;
+  font-size: 1rem;
+}
+footer .footer__content .footer__content__bottom p span {
+  font-weight: 800;
+  color: #909090;
+}
+footer .footer__content p {
+  color: #777777;
+  font-size: 0.8rem;
+  padding: 1.4rem;
+  text-align: center;
 }
 
 * {
