--- a/scss/_main_nav.scss
+++ b/scss/_main_nav.scss
@@ -7,7 +7,7 @@
   .main-nav {
     width: 80%;
     margin: 0 auto;
-    height: 7rem;
+    height: 8rem;
     align-items: center;
     max-width: 1200px;
 
@@ -17,18 +17,18 @@
 
     .main-nav__logo {
       align-items: center;
-      font-size: 1.3rem;
+      font-size: 1.6rem;
       background-color: #d8d8d8;
       color: #525252;
       border: 1px solid #979797;
-      height: 65%;
-      width: 15rem;
+      height: 70%;
+      width: 18rem;
     }
 
     .main-nav__left,
     .main-nav__right {
       gap: 1.7rem;
-      font-weight: 500;
+      font-weight: 400;
       font-size: 1rem;
       width: 35%;
     }
@@ -39,6 +39,11 @@
 
     .main-nav__right {
       justify-content: end;
+
+      & i {
+        margin-left: 1rem;
+        font-size: 1.1rem;
+      }
     }
   }
 }
