--- a/scss/_subscribe.scss
+++ b/scss/_subscribe.scss
@@ -1,62 +1,142 @@
 @import './variables';
 
 .subscribe {
-  width: 96%;
-  max-width: 1590px;
-  margin: 0 auto;
+  max-width: calc(1590px * 0.9);
+  margin: 0 auto 2rem;
+  position: relative;
   background-image: url('../assets/img/newsletter_bg.png');
-  height: 20rem;
   background-repeat: no-repeat;
-  background-size: cover;
   background-position: center;
-  justify-content: space-between;
-  align-items: center;
-  margin-bottom: 200px;
-//   filter: brightness(.8);
+  background-size: cover;
+  background-color: rgba(0, 0, 0, 0.4);
+  background-blend-mode: multiply;
+  height: 20rem;
 
-  .subscribe__text {
-    color: white;
-    width: 50%;
-    text-align: center;
+  .subscribe__contents {
+    width: 80%;
+    height: 100%;
+    margin: 0 auto;
 
-    h2 {
-      font-weight: 400;
-      font-size: 2.4rem;
-      margin-bottom: 1.6rem;
+    .subscribe__contents__text {
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      color: #e9e9e9;
+      width: 50%;
+      text-align: center;
+
+      h2 {
+        font-weight: 400;
+        font-size: 2.4rem;
+        margin-bottom: 1.6rem;
+      }
+
+      p {
+        line-height: 1.6rem;
+      }
     }
 
-    p {
-      line-height: 1.6rem;
-    }
-  }
+    .subscribe__contents__form {
+      padding-left: 4rem;
+      align-items: center;
 
-  .subscribe__form {
-    width: 50%;
-
-
-    form {
-        display: flex;
+      form {
+        border: 1px solid black;
+        height: 3rem;
 
         input[type='text'] {
           border: none;
-          display: block;
-          width: 25rem;
-          padding: 1rem;
-          margin-left: 5rem;
+          width: 20.7rem;
+          height: 100%;
+          margin-right: -3px;
+          padding: 0 .8rem;
         }
-    
+
         input[type='text']::placeholder {
           text-transform: uppercase;
           font-size: 1rem;
+          letter-spacing: 2px;
+          color: #999999;
         }
-    
+
         button {
           border: none;
           background-color: $button-black;
           color: white;
           font-size: 1rem;
+          letter-spacing: 2px;
+          height: 100%;
           padding: 0 2rem;
         }
+      }
     }
   }
 }
+
+// .subscribe {
+//   width: 96%;
+//   max-width: 1590px;
+//   margin: 0 auto;
+//   height: 20rem;
+//   border: 1px solid red;
+
+//   .subscribe__contents {
+//     border: 5px solid red;
+// justify-content: space-between;
+//   align-items: center;
+//   margin-bottom: 200px;
+
+//     img {
+//       object-fit: cover;
+//       opacity: .4;
+//       width: 100%;
+//     }
+
+//     .subscribe__text {
+//       color: white;
+//       width: 50%;
+//       text-align: center;
+
+//       h2 {
+//         font-weight: 400;
+//         font-size: 2.4rem;
+//         margin-bottom: 1.6rem;
+//       }
+
+//       p {
+//         line-height: 1.6rem;
+//       }
+//     }
+
+//     .subscribe__form {
+//       width: 50%;
+
+//       form {
+//         display: flex;
+
+//         input[type='text'] {
+//           border: none;
+//           display: block;
+//           width: 25rem;
+//           padding: 1rem;
+//           margin-left: 5rem;
+//         }
+
+//         input[type='text']::placeholder {
+//           text-transform: uppercase;
+//           font-size: 1rem;
+//         }
+
+//         button {
+//           border: none;
+//           background-color: $button-black;
+//           color: white;
+//           font-size: 1rem;
+//           padding: 0 2rem;
+//         }
+//       }
+//     }
+
+//   }
+
+// }
