--- a/scss/_main_product.scss
+++ b/scss/_main_product.scss
@@ -12,11 +12,54 @@
   max-width: 1590px;
 
   .product {
+
+    @media (max-width: '930px') {
+      flex-direction: column;
+    }
     .main-image-container {
       min-width: 56%;
-
-      & img {
+      min-height: 20rem;
+      overflow: hidden;
+      position: relative;
+      display: flex;
+      
+      img {
         width: 100%;
+        height: 100%;
+        display: none;
+        object-fit: cover;
+
+        &.display-slide {
+          display: block;
+        }
+      }
+
+      .slides {
+        img .slide {
+
+        }
+      }
+      .slide-nav {
+        display: flex;
+        position: absolute;
+        bottom: 20px;
+        left: 0;
+        right: 0;
+        width: 6rem;
+        justify-content: space-evenly;
+        margin: 0 auto;
+
+        .slide-nav__circle {
+          width: 12px;
+          height: 12px;
+          border-radius: 50%;
+          background-color: #999999;
+          cursor: pointer;
+
+          &.active-slide {
+            background-color: white
+          }
+        }
       }
     }
 
