--- a/scss/_main_nav.scss
+++ b/scss/_main_nav.scss
@@ -2,7 +2,7 @@
 
 .main-nav-container {
   background-color: white;
-    filter: drop-shadow(1px 1px 5px #00000040);
+  filter: drop-shadow(1px 1px 5px #00000040);
 
   .main-nav {
     width: 80%;
@@ -23,26 +23,78 @@
       border: 1px solid #979797;
       height: 70%;
       width: 18rem;
+
+      @media (max-width: '1200px') {
+        width: 12rem;
+        height: 50%;
+      }
     }
 
-    .main-nav__left,
-    .main-nav__right {
+    .main-nav__left__desktop,
+    .main-nav__right__desktop {
       gap: 1.7rem;
       font-weight: 400;
       font-size: 1rem;
       width: 35%;
+
+      @media (max-width: '1200px') {
+        display: none;
+      }
     }
 
-    .main-nav__left {
+    .main-nav__left__desktop {
       justify-content: start;
     }
 
-    .main-nav__right {
+    .main-nav__right__desktop,
+    .main-nav__right__mobile {
       justify-content: end;
 
       & i {
         margin-left: 1rem;
+        margin-right: 0.3rem;
         font-size: 1.1rem;
+        opacity: 0.7;
+
+        &:hover {
+          opacity: 1;
+        }
+      }
+    }
+
+    .main-nav__right__mobile {
+      gap: 0.5rem;
+    }
+
+    .main-nav__left__mobile,
+    .main-nav__right__mobile {
+      font-weight: 400;
+      font-size: 1rem;
+      width: 35%;
+
+      @media (min-width: '1200px') {
+        display: none;
+      }
+    }
+
+    .main-nav__left__mobile {
+      .mobile-nav {
+        height: 22px;
+        width: 25px;
+        position: relative;
+        cursor: pointer;
+
+        .mobile-nav__line {
+          position: absolute;
+          top: 12px;
+          background-color: black;
+          width: 25px;
+          height: 2px;
+
+          &:first-of-type {
+            top: 6px;
+          }
+        }
       }
     }
   }
