--- a/scss/_main_product.scss
+++ b/scss/_main_product.scss
@@ -18,7 +18,6 @@
     }
     .main-image-container {
       min-width: 56%;
-      min-height: 20rem;
       overflow: hidden;
       position: relative;
       display: flex;
@@ -26,7 +25,6 @@
       img {
         width: 100%;
         height: 100%;
-        display: none;
         object-fit: cover;
 
         &.display-slide {
@@ -35,9 +33,20 @@
       }
 
       .slides {
+        display: flex;
+        overflow-x: scroll;
+        scroll-behavior: smooth;
+        scrollbar-width: 0;
+        
+        &::-webkit-scrollbar { 
+          width: 0;
+          height: 0;
+      }
+
         img .slide {
 
         }
+
       }
       .slide-nav {
         display: flex;
