--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,8 @@
 .main-nav-container {
   background-color: white;
   filter: drop-shadow(1px 1px 5px rgba(0, 0, 0, 0.2509803922));
+  position: relative;
+  z-index: 1;
 }
 .main-nav-container .main-nav {
   width: 80%;
@@ -173,7 +175,7 @@
   display: flex;
 }
 .product-section .product .main-image-container img {
-  width: 100%;
+  min-width: 100%;
   height: 100%;
   object-fit: cover;
 }
