--- a/scss/_main_nav.scss
+++ b/scss/_main_nav.scss
@@ -3,6 +3,8 @@
 .main-nav-container {
   background-color: white;
   filter: drop-shadow(1px 1px 5px #00000040);
+  position: relative;
+  z-index: 1;
 
   .main-nav {
     width: 80%;
