--- a/scss/_main_product.scss
+++ b/scss/_main_product.scss
@@ -12,7 +12,6 @@
   max-width: 1590px;
 
   .product {
-
     @media (max-width: '930px') {
       flex-direction: column;
     }
@@ -23,7 +22,7 @@
       display: flex;
       
       img {
-        width: 100%;
+        min-width: 100%;
         height: 100%;
         object-fit: cover;
 
